k8s/monolith-db.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: library-monolith-db
spec:
  selector:
    matchLabels:
      app: library-monolith-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: library-monolith-db
    spec:
      containers:
      - image: mysql:5.7
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
---
apiVersion: v1
kind: Service
metadata:
  name: library-monolith-db
spec:
  type: ClusterIP
  selector:
    app: library-monolith-db
  ports:
  - port: 3306
