k8s/monolith.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: library-monolith
  name: library-monolith
spec:
  replicas: 1
  selector:
    matchLabels:
      app: library-monolith
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: library-monolith
    spec:
      containers:
      - name: library-monolith
        image: juablazmahuerta/library-monolith:0.0.1
---
apiVersion: v1
kind: Service
metadata:
  name: library-monolith
  labels:
    app: library-monolith
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: library-monolith
  type: NodePort
