k8s/mysql-db.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: mysql-db
spec:
  selector:
    matchLabels:
      app: mysql-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql-db
    spec:
      containers:
      - image: mysql:5.7
        name: mysql
        command: ["/bin/sh", "-c"]
        args:
        - echo "CREATE DATABASE IF NOT EXISTS monolith_db;" >> /docker-entrypoint-initdb.d/init.sql;
          echo "CREATE DATABASE IF NOT EXISTS userms_db;" >> /docker-entrypoint-initdb.d/init.sql;
          /usr/local/bin/docker-entrypoint.sh --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
        ports:
        - containerPort: 3306
          name: mysql
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-db
spec:
  type: ClusterIP
  selector:
    app: mysql-db
  ports:
  - port: 3306
