k8s/userms-db.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: userms-db
spec:
  selector:
    matchLabels:
      app: userms-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: userms-db
    spec:
      containers:
      - image: mysql:5.7
        name: mysql
        ports:
        - containerPort: 3307
          name: mysql
---
apiVersion: v1
kind: Service
metadata:
  name: userms-db
spec:
  type: ClusterIP
  selector:
    app: userms-db
  ports:
  - port: 3307
