k8s/userms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: userms
  name: userms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userms
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: userms
    spec:
      containers:
      - name: userms
        image: juablazmahuerta/user-ms:0.0.1
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: userms
  name: userms
spec:
  ports:
  - protocol: TCP
    port: 8090
    targetPort: 8090
  selector:
    app: userms
  type: ClusterIP
