k8s/ingress-with-microservice.yaml
apiVersion: extensions/v1beta1  
kind: Ingress  
metadata:  
  name: library-monolith
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:  
  rules:
  - host: www.library.com
    http:
      paths:
      - path: /(.*)
        backend:
          serviceName: library-monolith
          servicePort: 8080
