k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress  
metadata:  
  name: library-monolith
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:  
  rules:
  - host: www.library.com
    http:
      paths:
      - path: /books(.*)
        backend:
          serviceName: library-monolith
          servicePort: 8080
      - path: /users/^\d+$/comments
        backend:
          serviceName: library-monolith
          servicePort: 8080
      - path: /users(.*)
        backend:
          serviceName: userms
          servicePort: 8090
#      - path: /(.*)
#        backend:
#          serviceName: library-monolith
#          servicePort: 8080
